<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shopping_list_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/milk_white"
    android:padding="4dp">

    <TextView
        android:id="@+id/item_name_txv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/purchase_item"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_icon_imv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/edit_icon_imv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/oval_bg"
        android:contentDescription="@string/product_category_icon"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/sl_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/remove_icon_imv"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/milk_white" />

    <ImageView
        android:id="@+id/remove_icon_imv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/oval_bg"
        android:contentDescription="@string/remove_item_icon"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/sl_remove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/milk_white" />
</androidx.constraintlayout.widget.ConstraintLayout>